--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
+        <service android:name=".widget.WidgetService"
+
+        android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
